addming web manifests

--- a/web/AGC/thanks-contact.html
+++ b/web/AGC/thanks-contact.html
@@ -67,7 +67,7 @@
                 <h2 class="phone"><a href="tel:+800-837-3678">800-837-3678</a></h2>
             </div>
             <div class="col-md-3 cta">
-                <img src="/img/ehl.png">
+                <img width="50" src="/img/ehl.png">
             </div>
         </div>
     </footer>
