--- a/web/AGC/thanks-contact.html
+++ b/web/AGC/thanks-contact.html
@@ -37,22 +37,12 @@
             </div>
         </div>
     </header>
-    <section class="hero hero-secondary">
+    <section class="section-hero section-secondary">
         <div class="container">
             <h1>Thanks for Contacting Us!</h1>
             <p>One of our experts will be in touch after reviewing your information.</p>
         </div>
     </section>
-    
-    <!--<section class="content">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p>Occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                </div>
-            </div>
-        </div>
-    </section>-->
     
     <footer class="footer">
         <div class="container-fluid">
