--- a/web/agc/index.html
+++ b/web/agc/index.html
@@ -58,14 +58,14 @@
                 <div class="col-sm-4">
                     <div class="card">
                         <img class="card-image" src="/img/number1.png">
-                        <h3 class="card-title">Get in touch with a loan officer </h3>
+                        <h3 class="card-title">Get in touch with a<br>loan officer </h3>
                         <p class="card-content">Your resource from the first step to the last.</p>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="card">
                         <img class="card-image" src="/img/number2.png">
-                        <h3 class="card-title">Supply needed documents</h3>
+                        <h3 class="card-title">Supply needed<br>documents</h3>
                         <p class="card-content">We make it easy so you can focus on what matters most.</p>
                     </div>
                 </div>
