--- a/web/agc/thanks-contact.html
+++ b/web/agc/thanks-contact.html
@@ -40,7 +40,7 @@
     <section class="section-hero section-secondary">
         <div class="container">
             <h1>Thanks for Contacting Us!</h1>
-            <p>One of our experts will be in touch after reviewing your information.</p>
+            <p>One of our specialists will be in touch after reviewing your information.</p>
         </div>
     </section>
     
